--- a/package.json
+++ b/package.json
@@ -15,17 +15,19 @@
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "dayjs": "^1.11.11",
-
     "expo": "~51.0.9",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "0.74.1",
     "react-native-datepicker": "^1.7.2",
     "react-native-element-dropdown": "^2.12.0",
+    "react-native-orientation-locker": "^1.7.0",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "^3.31.1",
     "react-native-ui-datepicker": "^2.0.3",
-    "react-native-vector-icons": "^10.1.0"
+    "react-native-vector-icons": "^10.1.0",
+    "react-native-video": "^6.1.2",
+    "react-native-video-player": "^0.14.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
