--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native": "0.74.1",
     "react-native-datepicker": "^1.7.2",
     "react-native-element-dropdown": "^2.12.0",
+    "react-native-image-picker": "^7.1.2",
     "react-native-orientation-locker": "^1.7.0",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "^3.31.1",
