--- a/package.json
+++ b/package.json
@@ -27,8 +27,7 @@
     "react-native-screens": "^3.31.1",
     "react-native-ui-datepicker": "^2.0.3",
     "react-native-vector-icons": "^10.1.0",
-    "react-native-video": "^6.1.2",
-    "react-native-video-player": "^0.14.0"
+    "react-native-video": "^6.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
