--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@expo/config": "^8.1.1",
     "@expo/metro-config": "^0.10.0",
     "@react-native-community/datetimepicker": "^8.1.0",
+    "@react-native-firebase/app": "^20.1.0",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "dayjs": "^1.11.11",
