--- a/ios/Podfile
+++ b/ios/Podfile
@@ -19,7 +19,8 @@ target 'HHDProject' do
 
   use_frameworks! :linkage => podfile_properties['ios.useFrameworks'].to_sym if podfile_properties['ios.useFrameworks']
   use_frameworks! :linkage => ENV['USE_FRAMEWORKS'].to_sym if ENV['USE_FRAMEWORKS']
-
+  $RNFirebaseAsStaticFramework = true
+  use_frameworks! :linkage => :static
   use_react_native!(
     :path => config[:reactNativePath],
     :hermes_enabled => podfile_properties['expo.jsEngine'] == nil || podfile_properties['expo.jsEngine'] == 'hermes',
