--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-native-paper": "^5.12.3",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "^3.31.1",
+    "react-native-sectioned-multi-select": "^0.10.0",
     "react-native-ui-datepicker": "^2.0.3",
     "react-native-vector-icons": "^10.1.0",
     "react-native-video": "^6.1.2"
