--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@expo/metro-config": "^0.10.0",
     "@react-native-community/datetimepicker": "^8.1.0",
     "@react-native-firebase/app": "^20.1.0",
+    "@react-native-firebase/auth": "^20.1.0",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "dayjs": "^1.11.11",
@@ -27,6 +28,7 @@
     "react-native-paper": "^5.12.3",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "^3.31.1",
+    "react-native-sectioned-multi-select": "^0.10.0",
     "react-native-ui-datepicker": "^2.0.3",
     "react-native-vector-icons": "^10.1.0",
     "react-native-video": "^6.1.2"
