--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-native-firebase/app": "^20.1.0",
     "@react-native-firebase/auth": "^20.1.0",
     "@react-native-firebase/firestore": "^20.1.0",
+    "@react-native-firebase/storage": "^20.1.0",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "dayjs": "^1.11.11",
@@ -25,6 +26,7 @@
     "react-native": "0.74.1",
     "react-native-datepicker": "^1.7.2",
     "react-native-element-dropdown": "^2.12.0",
+    "react-native-fs": "^2.20.0",
     "react-native-image-picker": "^7.1.2",
     "react-native-orientation-locker": "^1.7.0",
     "react-native-paper": "^5.12.3",
