--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-native-screens": "^3.31.1",
     "react-native-sectioned-multi-select": "^0.10.0",
     "react-native-ui-datepicker": "^2.0.3",
+    "react-native-uuid": "^2.0.2",
     "react-native-vector-icons": "^10.1.0",
     "react-native-video": "^6.2.0"
   },
