--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
     "date-fns": "^3.6.0",
     "dayjs": "^1.11.11",
     "expo": "~51.0.9",
+    "expo-file-system": "~17.0.1",
+    "expo-sharing": "~12.0.1",
     "expo-status-bar": "~1.12.1",
+    "file-saver": "^2.0.5",
     "firebase": "^10.12.2",
     "react": "18.2.0",
     "react-native": "0.74.1",
@@ -38,7 +41,8 @@
     "react-native-ui-datepicker": "^2.0.3",
     "react-native-uuid": "^2.0.2",
     "react-native-vector-icons": "^10.1.0",
-    "react-native-video": "^6.2.0"
+    "react-native-video": "^6.2.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
