--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "18.2.0",
     "react-native": "0.74.1",
     "react-native-datepicker": "^1.7.2",
+    "react-native-dropdown-picker": "^5.4.6",
     "react-native-element-dropdown": "^2.12.0",
     "react-native-fs": "^2.20.0",
     "react-native-image-picker": "^7.1.2",
